test/Fail/Polarity-pragma-and-mixed-polarity.agda
postulate
  F : Set → Set

{-# POLARITY F * #-}

data D : Set where
  d : F D → D
